--- a/Q_Learning.ipynb
+++ b/Q_Learning.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,9 +63,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q-Table:\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Initializing an empty table\n",
     "\n",
@@ -73,7 +86,7 @@
     "    \"\"\"\n",
     "    This function must return a 2D matrix containing only zeros for values.\n",
     "    \"\"\"\n",
-    "    return None\n",
+    "    return np.zeros((x, y))\n",
     "\n",
     "qTable = init_q_table(5, 4)\n",
     "\n",
@@ -131,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,8 +157,8 @@
     "\n",
     "    It should return the updated q-table.\n",
     "    \"\"\"\n",
-    "\n",
-    "    return None"
+    "    q_table[state, action] = q_table[state, action] + LEARNING_RATE * (reward + DISCOUNT_RATE * np.max(q_table[newState, :]) - q_table[state, action])\n",
+    "    return q_table[state, action]"
    ]
   },
   {
@@ -159,9 +172,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q-Table after action:\n",
+      "[[ 0.   -0.05  0.    0.  ]\n",
+      " [ 0.    0.    0.    0.  ]\n",
+      " [ 0.    0.    0.    0.  ]\n",
+      " [ 0.    0.    0.    0.  ]\n",
+      " [ 0.    0.    0.    0.  ]]\n"
+     ]
+    }
+   ],
    "source": [
     "q_table = init_q_table(5,4)\n",
     "\n",
@@ -607,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4,
   "vscode": {
